tests/compile-fail/Rule_8_5.rs
include!("../../src/main.rs");

pub const PUBLIC_ZERO: u64 = 0u64;
//~^ ERROR `PUBLIC_ZERO` redefined here

